expected/main/gens/primIxToBit-neg-32.err
ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 6
external ix4ToBit1     {primIxToBit 4     1} :: Ix 4 -> Bit 1
         ^
No generated implementation: Width 1 is not large enough for index value 4

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 7
external ix257ToBit8   {primIxToBit 257   8} :: Ix 257 -> Bit 8
         ^
No generated implementation: Width 8 is not large enough for index value 257

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 8
external ix1000ToBit9  {primIxToBit 1000  9} :: Ix 1000 -> Bit 9
         ^
No generated implementation: Width 9 is not large enough for index value 1000

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 9
external ix1MToBit12   {primIxToBit 1M   12} :: Ix 1M -> Bit 12
         ^
No generated implementation: Width 12 is not large enough for index value 1048576

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 10
external ix1MToBit19   {primIxToBit 1M   19} :: Ix 1M -> Bit 19
         ^
No generated implementation: Width 19 is not large enough for index value 1048576

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 11
external ix2GToBit32   {primIxToBit 2G   32} :: Ix 2G -> Bit 32
         ^
No generated implementation: Argument value 2147483648 is too large; must be at most 2147483647

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 12
external ix257ToBit2M  {primIxToBit 257  2M} :: Ix 257 -> Bit 2M
         ^
No generated implementation: Argument value 2097152 is too large; must be less than 1000

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 13
external ix1000ToBit8K {primIxToBit 1000 8K} :: Ix 1000 -> Bit 8K
         ^
No generated implementation: Argument value 8192 is too large; must be less than 1000

ERROR: "actual/main/gens/primIxToBit-neg-32.lc", line 14
external ix513ToBit9   {primIxToBit 513   9} :: Ix 513  -> Bit 9
         ^
No generated implementation: Width 9 is not large enough for index value 513

ERROR: Aborting after 9 previously reported errors

